--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Rock Paper Scissors Game</title>
 </head>
-
 <body>
-    <script src="script.js"></script>
+  <h1>Rock Paper Scissors</h1>
+  <div id="results"></div>
+  <div id="score">Player: 0 | Computer: 0</div>
+  <button id="rock">Rock</button>
+  <button id="paper">Paper</button>
+  <button id="scissors">Scissors</button>
+  <script src="script.js"></script>
 </body>
-
 </html>
