Create basic layout

--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Rock Paper Scissors Game</title>
+    <title>Rock Paper Scissors Game</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
+
 <body>
-  <h1>Rock Paper Scissors</h1>
-  <div id="results"></div>
-  <div id="score">Player: 0 | Computer: 0</div>
-  <button id="rock">Rock</button>
-  <button id="paper">Paper</button>
-  <button id="scissors">Scissors</button>
-  <script src="script.js"></script>
+    <h1>Rock Paper Scissor</h1>
+    <div id="results"></div>
+    <div id="score">Player: 0 | Computer: 0</div>
+    <div class="container">
+        <div class="player-box">
+            <div class="emoji">🧻</div>
+            <div class="selection-box">
+                <button id="rock">Rock 🪨</button>
+                <button id="paper">Paper 🧻</button>
+                <button id="scissors">Scissors ✂️</button>
+            </div>
+        </div>
+        <div class="player-box">
+            <div class="emoji">🪨</div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
