Add change of emojis to selected choice

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="score">Player: 0 | Computer: 0</div>
     <div class="container">
         <div class="player-box">
-            <div class="emoji">🧻</div>
+            <span id="player-emoji">🧻</span>
             <div class="selection-box">
                 <button id="rock">Rock 🪨</button>
                 <button id="paper">Paper 🧻</button>
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="player-box">
-            <div class="emoji">🪨</div>
+            <span id="npc-emoji">🪨</span>
         </div>
     </div>
     <script src="script.js"></script>
